feat: atualiza informações de trabalho

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Portfólio</title>
 </head>
 
-<body>
+<body class="dark-theme">
     <!-- HEADER -->
     <header class="header" id="header">
         <nav class="nav container">
@@ -31,7 +31,7 @@
                 <ul class="nav__list grid">
                     <li class="nav__item">
                         <a href="#home" class="nav__link active-link">
-                            <i class="uil uil-home nav__icon "></i> Home
+                            <i class="uil uil-home nav__icon"></i> Home
                         </a>
                     </li>
                     <li class="nav__item">
@@ -60,7 +60,7 @@
 
             <div class="nav__btns">
                 <!-- THEME CHANGE BUTTON -->
-                <i class="uil uil-moon change-theme" id="theme-button"></i>
+                <i class="uil uil-moon change-theme uil-sun" id="theme-button"></i>
 
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="uil uil-cube"></i>
@@ -90,11 +90,11 @@
 
                     <div class="home__data">
                         <h1 class="home__title">Edson Isaac</h1>
-                        <h3 class="home__subtitle">Desenvolvedor Web</h3>
+                        <h3 class="home__subtitle">Desenvolvedor FullStack</h3>
                         <div class="home__description">
                             <p>Olá, tudo bem?</p>
                             <p>
-                                Meu nome é Edson e sou Desenvolvedor Web. Convido você a explorar meu trabalho e
+                                Meu nome é Edson e sou Desenvolvedor. Convido você a explorar meu trabalho e
                                 descobrir mais sobre minhas experiências e projetos.
                             </p>
                         </div>
@@ -382,7 +382,7 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">Desenvolvedor Web</h3>
+                                <h3 class="qualification__title">Desenvolvedor PHP</h3>
                                 <span class="qualification__subtitle">Grupo Well</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
@@ -404,6 +404,24 @@
 
                             <div>
                                 <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+                        <!-- QUALIFICATION 4 -->
+                        <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__title">Desenvolvedor FullStack</h3>
+                                <span class="qualification__subtitle">Postali</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2025 - Atualmente
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -691,20 +709,12 @@
                     </div>
 
                     <div class="contact__information">
-                        <i class="uil uil-twitter-alt contact__icon"></i>
-
-                        <div>
-                            <h3 class="contact__title">Manda uma DM</h3>
-                            <span class="contact__subtitle">@jugurgot</span>
-                        </div>
-                    </div>
-
-                    <div class="contact__information">
                         <i class="uil uil-envelope contact__icon"></i>
 
                         <div>
                             <h3 class="contact__title">Que tal um e-mail?</h3>
                             <span class="contact__subtitle">edssaac@outlook.com</span>
+                            <span class="contact__subtitle">edssaac@gmail.com</span>
                         </div>
                     </div>
                 </div>
